--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0D4910"
+    android:background="@drawable/background_layout"
     tools:context=".MainActivity">
 
     <TextView
@@ -25,9 +25,9 @@
         android:id="@+id/s_placeInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="30dp"
         android:entries="@array/s_place"
         android:foreground="@drawable/s_input"
         android:padding="10dp"
@@ -90,11 +90,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:background="@drawable/s_input"
-        android:drawableEnd="@drawable/s_ic_baseline_calendar_today_24"
+        android:drawableRight="@drawable/s_ic_baseline_calendar_today_24"
         android:ems="10"
         android:hint="@string/s_date"
         android:inputType="date"
         android:padding="10dp"
+        android:paddingEnd="20dp"
         android:textColor="#FFFFFF"
         android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="@+id/s_8input"
