--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0D4910"
+    android:background="@drawable/background_layout"
     tools:context=".Register">
 
     <EditText
@@ -15,6 +15,8 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
         android:background="@drawable/d_input_bg"
+        android:drawableLeft="@drawable/ic_reg_person"
+        android:drawablePadding="10dp"
         android:ems="10"
         android:hint="@string/d_loginname"
         android:inputType="textPersonName"
@@ -67,6 +69,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:background="@drawable/d_input_bg"
+        android:drawableLeft="@drawable/ic_login_mail"
+        android:drawablePadding="10dp"
         android:ems="10"
         android:hint="@string/d_email"
         android:inputType="textEmailAddress"
@@ -83,6 +87,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:background="@drawable/d_input_bg"
+        android:drawableLeft="@drawable/ic_reg_phone"
+        android:drawablePadding="10dp"
         android:ems="10"
         android:hint="@string/d_contact"
         android:inputType="phone"
@@ -99,6 +105,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:background="@drawable/d_input_bg"
+        android:drawableLeft="@drawable/ic_baseline_security_24"
+        android:drawablePadding="10dp"
         android:ems="10"
         android:hint="@string/d_loginpassword"
         android:inputType="textPassword"
@@ -115,6 +123,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:background="@drawable/d_input_bg"
+        android:drawableLeft="@drawable/ic_baseline_security_24"
+        android:drawablePadding="10dp"
         android:ems="10"
         android:hint="@string/d_c_loginpassword"
         android:inputType="textPassword"
