--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0D4910"
+    android:background="@drawable/background_layout"
     tools:context=".Feedback">
 
     <TextView
@@ -68,6 +68,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/d_feedInput" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
