--- a/app/src/main/res/layout/safari.xml
+++ b/app/src/main/res/layout/safari.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
+    android:background=" #00555555"
     android:padding="10dp"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="8dp">
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
 
             <TextView
@@ -38,10 +40,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="85dp"
                 android:padding="5dp"
                 android:text="Park"
+                android:textColor="#FFFFFF"
                 android:textSize="20sp"
                 android:textStyle="bold" />
+
 
             <TextView
                 android:id="@+id/park_txt"
@@ -49,6 +54,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:text="park"
+                android:textColor="#FFFFFF"
                 android:textSize="17dp"
                 android:textStyle="bold" />
 
@@ -64,6 +70,7 @@
                 android:layout_height="wrap_content"
                 android:padding="5dp"
                 android:text="4 Seat vehicle"
+                android:textColor="#FFFFFF"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -73,6 +80,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:text="0"
+                android:textColor="#FFFFFF"
                 android:textSize="17dp"
                 android:textStyle="bold" />
 
@@ -88,6 +96,7 @@
                 android:layout_height="wrap_content"
                 android:padding="5dp"
                 android:text="6 seat vehicle"
+                android:textColor="#FFFFFF"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -97,6 +106,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:text="0"
+                android:textColor="#FFFFFF"
                 android:textSize="17dp"
                 android:textStyle="bold" />
 
@@ -112,6 +122,7 @@
                 android:layout_height="wrap_content"
                 android:padding="5dp"
                 android:text="8 seat vehicle"
+                android:textColor="#FFFFFF"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -121,6 +132,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:text="0"
+                android:textColor="#FFFFFF"
                 android:textSize="17dp"
                 android:textStyle="bold" />
 
@@ -139,8 +151,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="30dp"
                 android:padding="5dp"
                 android:text="Total vehicle"
+                android:textColor="#FFFFFF"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -148,8 +162,8 @@
                 android:id="@+id/Total_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
                 android:text="0"
+                android:textColor="#FFFFFF"
                 android:textSize="17dp"
                 android:textStyle="bold" />
 
@@ -163,8 +177,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="52dp"
                 android:padding="5dp"
                 android:text="Amount"
+                android:textColor="#FFFFFF"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -174,6 +190,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:text="total"
+                android:textColor="#FFFFFF"
                 android:textSize="17dp"
                 android:textStyle="bold" />
 
@@ -187,8 +204,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="102dp"
                 android:padding="5dp"
                 android:text="Date"
+                android:textColor="#FFFFFF"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -196,12 +215,13 @@
                 android:id="@+id/S_date_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
                 android:text="date"
+                android:textColor="#FFFFFF"
                 android:textSize="17dp"
                 android:textStyle="bold" />
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -229,7 +249,7 @@
                 android:id="@+id/deleteSaf"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/d_input_bg"
+                android:background="@drawable/s_btn"
                 android:text="@string/t_DeleteBtn"
                 android:textSize="16sp" />
 
@@ -237,7 +257,7 @@
 
     </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+</LinearLayout>
 
 
 
